$Id: CHANGES,v 1.9 2009/07/24 17:29:04 avr Exp $

CHANGES file for project GPSDisplay
============================================================================

ToDo:
-----
- place text strings in Flash (ProgMem)
- GPS data quality display (via yellow LED/blinking)
- fix latitude display (character set ?)
- use N4TXIs Serial.c rather than P.Fleurys uartlib
- reduce memory consumption of some calculations/conversion routines


2009/07/24 (thjm) - imported get8key4.* (P.Dannegger) 
                  - checking push button to advance LCD display mode
		    - this uses counter1 which is also used in WhereAVR
		  - LcdDisplay.* -> LCDDisplay.*

2009/07/23 (thjm) - added a few (unnecessary !?) more gimicks to the code
                  - compile time option to use N4TXIs Serial.* module (inact.)

2009/07/21 (thjm) - wiring for LCD finally OK:
                    - one display turns out to be 2x1x8 (=1x16)
		    - second one has probably defective rows (=2x16)
		    
2009/07/16 (thjm) - wiring scheme for PC-GPS-AVRTracker adaptor:

                     PC (DTE)                           GPS (DCE) 
		    ----------                         -----------
		     RxD (2,gn) ----------------------- RxD (3,ye)
		     TxD (3,ye) ----------------+ +---- TxD (2,ye)
		     GND (5,bn) --------------*-------- GND (5,bn)
		                              | | |
		                              | | |     AVR (DCE)
					      | | |    -----------
					      | | +---- RxD (3,ye)
					      | +------ TxD (2,gn)
					      +-------- GND (5,bn)

                  - test program for the LCD added (testLCD.c)
		  - worked on Makefile (pattern rules)
		  
2009/07/15 (thjm) - added (optional) writing to file of NMEA strings

2009/07/10 (thjm) - SConstruct splitted into SConscript
                    + extra build directory
		  - Clean() target to removed .build directory for 'scons -c'
		  - AVR implementation added:
		    - Makefile is for AVR (similar to WhereAVR)