@@ -1,7 +1,13 @@
-$Id: CHANGES,v 1.9 2009/07/24 17:29:04 avr Exp $
+$Id: CHANGES,v 1.10 2009/07/30 11:03:39 avr Exp $
 
 CHANGES file for project GPSDisplay
 ============================================================================
+
+Garmin GPS25-LVC strings:
+-------------------------
+- $PGRMO,GPGSV,0
+- $PGRMIE
+
 
 ToDo:
 -----
